tests/fixtures/components/compilable/input-errors.blade.php
<input @if ($errors->has('name')) invalid @endif >