tests/fixtures/components/invalid-pure/old.blade.php
@pure

<input type="text" name="email" value="{{ old('email') }}" />
